--- a/socketclient/src/main/res/layout/activity_main.xml
+++ b/socketclient/src/main/res/layout/activity_main.xml
@@ -34,6 +34,26 @@
         app:layout_constraintStart_toStartOf="@+id/bt_connect_socket"
         app:layout_constraintTop_toBottomOf="@+id/bt_connect_socket" />
 
+    <Button
+        android:id="@+id/bt_send_msg2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sendMessage2"
+        android:text="发送数据到服务端10000"
+        app:layout_constraintEnd_toEndOf="@+id/bt_send_msg"
+        app:layout_constraintStart_toStartOf="@+id/bt_send_msg"
+        app:layout_constraintTop_toBottomOf="@+id/bt_send_msg" />
+
+    <Button
+        android:id="@+id/bt_send_msg3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="sendMessage3"
+        android:text="发送数据到服务端10001"
+        app:layout_constraintEnd_toEndOf="@+id/bt_send_msg2"
+        app:layout_constraintStart_toStartOf="@+id/bt_send_msg2"
+        app:layout_constraintTop_toBottomOf="@+id/bt_send_msg2" />
+
     <TextView
         android:id="@+id/tv_receiver"
         android:layout_width="match_parent"
