--- a/socketclient/src/main/res/layout/activity_main.xml
+++ b/socketclient/src/main/res/layout/activity_main.xml
@@ -59,6 +59,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_send_msg" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_send_msg3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
